modified and added files

--- a/alertmanager/alertmanager.yml
+++ b/alertmanager/alertmanager.yml
@@ -1,23 +1,20 @@
 global:
-  smtp_smarthost: 'localhost:587'
+  resolve_timeout: 5m
+  smtp_smarthost: 'localhost:25'
   smtp_from: 'alertmanager@example.com'
 
 route:
+  receiver: 'webhook'
   group_by: ['alertname']
   group_wait: 10s
-  group_interval: 10s
+  group_interval: 30s
   repeat_interval: 1h
-  receiver: 'webhook'
 
 receivers:
-- name: 'webhook'
-  webhook_configs:
-  - url: 'http://webhook:5000/webhook'
-    send_resolved: true
-    http_config:
-      basic_auth:
-        username: 'admin'
-        password: 'password'
+  - name: 'webhook'
+    webhook_configs:
+      - url: 'http://localhost:5000/webhook'
+        send_resolved: true
 
 inhibit_rules:
   - source_match:
@@ -25,3 +22,4 @@ inhibit_rules:
     target_match:
       severity: 'warning'
     equal: ['alertname', 'instance']
+
