--- a/ansible/heal-nginx.yml
+++ b/ansible/heal-nginx.yml
@@ -1,6 +1,6 @@
 ---
 - name: Self-healing NGINX service
-  hosts: localhost
+  hosts: local
   gather_facts: yes
   become: yes
   
@@ -21,7 +21,7 @@
         name: "{{ service_name }}"
         state: restarted
         daemon_reload: yes
-      when: nginx_status.failed
+      when: nginx_status is failed or nginx_status.changed == false
       register: restart_result
       
     - name: Wait for service to be ready
