--- a/prometheus/alert_rules.yml
+++ b/prometheus/alert_rules.yml
@@ -2,7 +2,7 @@ groups:
 - name: nginx_alerts
   rules:
   - alert: NginxDown
-    expr: up{job="nginx"} == 0
+    expr: probe_success{job="nginx"} == 0
     for: 10s
     labels:
       severity: critical
@@ -29,10 +29,19 @@ groups:
       description: "Memory usage is above 80% for more than 2 minutes."
 
   - alert: NginxServiceUnhealthy
-    expr: nginx_up == 0
+    expr: probe_success{job="nginx"} == 0
     for: 30s
     labels:
       severity: critical
     annotations:
       summary: "NGINX service is unhealthy"
       description: "NGINX service health check is failing."
+  
+  - alert: NginxSlowResponse
+    expr: probe_duration_seconds{job="nginx"} > 3
+    for: 1m
+    labels:
+      severity: warning
+    annotations:
+      summary: "NGINX slow response time"
+      description: "NGINX response time is above 3 seconds for more than 1 minute."
