--- a/ansible/heal-nginx.yml
+++ b/ansible/heal-nginx.yml
@@ -39,14 +39,14 @@
     - name: Wait for container to be ready
       wait_for:
         port: 80
-        host: localhost
+        host: nginx
         delay: 5
         timeout: 30
       when: restart_result.changed or compose_restart_result.changed
       
     - name: Verify NGINX service is responding
       uri:
-        url: http://localhost:80
+        url: http://nginx:80
         method: GET
         status_code: 200
         timeout: 10
