--- a/ansible/heal-nginx.yml
+++ b/ansible/heal-nginx.yml
@@ -3,31 +3,40 @@
   hosts: localhost
   connection: local
   gather_facts: yes
-  
+
   vars:
     container_name: nginx
     compose_file: /app/docker-compose.yml
     max_restart_attempts: 3
-    
+    docker_host: "unix:///var/run/docker.sock"
+
   tasks:
+
     - name: Check if NGINX container is running
-      docker_container_info:
+      community.docker.docker_container_info:
         name: "{{ container_name }}"
+        docker_host: "{{ docker_host }}"
       register: nginx_container_info
       ignore_errors: yes
-      
+
     - name: Display container status
       debug:
-        msg: "Container {{ container_name }} status: {{ nginx_container_info.container.State.Status if nginx_container_info.exists else 'not found' }}"
-      
+        msg: >
+          Container {{ container_name }} status:
+          {{ nginx_container_info.container.State.Status
+             if nginx_container_info.container is defined else 'not found' }}
+
     - name: Restart NGINX container if not running
-      docker_container:
+      community.docker.docker_container:
         name: "{{ container_name }}"
         state: started
         restart: yes
-      when: not nginx_container_info.exists or nginx_container_info.container.State.Status != "running"
+        docker_host: "{{ docker_host }}"
+      when: nginx_container_info.container is not defined
+            or nginx_container_info.container.State.Status != "running"
       register: restart_result
-      
+      ignore_errors: yes
+
     - name: Alternative restart using docker-compose
       shell: |
         cd "{{ compose_file | dirname }}"
@@ -35,30 +44,32 @@
       when: restart_result is failed
       register: compose_restart_result
       ignore_errors: yes
-      
+
     - name: Wait for container to be ready
       wait_for:
         port: 80
-        host: nginx
+        host: 127.0.0.1
         delay: 5
         timeout: 30
       when: restart_result.changed or compose_restart_result.changed
-      
+
     - name: Verify NGINX service is responding
       uri:
-        url: http://nginx:80
+        url: http://127.0.0.1:80
         method: GET
         status_code: 200
         timeout: 10
       register: health_check
       retries: 3
       delay: 5
-      
+      until: health_check.status == 200
+
     - name: Check container health status
-      docker_container_info:
+      community.docker.docker_container_info:
         name: "{{ container_name }}"
+        docker_host: "{{ docker_host }}"
       register: final_container_status
-      
+
     - name: Log healing action
       lineinfile:
         path: /var/log/self-healing.log
@@ -66,12 +77,12 @@
         create: yes
       when: health_check.status == 200
       become: yes
-      
+
     - name: Send notification on successful healing
       debug:
         msg: "✅ NGINX Docker container has been successfully healed and is now running (Status: {{ final_container_status.container.State.Status }})"
       when: health_check.status == 200
-      
+
     - name: Log failure if service cannot be healed
       lineinfile:
         path: /var/log/self-healing.log
@@ -79,7 +90,7 @@
         create: yes
       when: health_check.status != 200
       become: yes
-      
+
     - name: Fail if service cannot be healed
       fail:
         msg: "❌ Failed to heal NGINX Docker container after restart attempts"
